<resources>
    <string name="app_name">CCS Members App</string>
    <string name="pay_with_google_content_description">Pay with Google</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="member_code">Enter Member No.</string>
    <string name="and">&amp;</string>
    <string name="demo">demo</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="notification_permission_is_required_please_allow_notification_permission_from_setting">Notification permission is required, Please allow notification permission from setting</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="notification_permission_granted">notification permission granted</string>
    <string name="select_clubname">Select Club</string>
    <string name="please_select_club_name">Please select club name</string>
    <string name="please_enter_passcode_membercode">Please enter passcode and member code</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="lees">Less</string>
    <string name="wallet">Donation</string>
    <string name="chat">Chat</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
    <string name="loading">Loading....</string>
    <string name="error">Error occurred</string>
    <string name="no_internet">Oops!! No internet Connected to your device.</string>
    <string name="txcontinue">Continue</string>
    <string name="item">Item</string>
    <string name="remove">Remove</string>
    <string name="item_total">Item Total</string>
    <string name="discount">- Discount</string>
    <string name="credit">Your Credit</string>
    <string name="payable_total">Payable Total</string>
    <string name="place_order">Place Order</string>
    <string name="items">Items</string>
    <string name="remaining_credit">Remaining Credit</string>
    <string name="pay">pay</string>
    <string name="price_detail">PRICE DETAILS</string>
    <string name="data_cart_empty">Your cart is empty!</string>
    <string name="select_quantity">Please first select quantity</string>
    <string name="plus_taxes">Plus taxes</string>
    <string name="enter_gram_details">Please enter gram details</string>
    <string name="add_account">Add club</string>
    <string name="available_credit">Available Credit</string>
    <string name="note">Note</string>
    <string name="en">en</string>
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="donation_history">Donation History</string>
    <string name="account_already_added">Account already added</string>
    <string name="delete_product_dialog">Are you sure want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="not_now">Not Now</string>
    <string name="add_credit">Add Credit</string>
    <string name="old_credit">Old Credit:</string>
    <string name="new_credit">New Credit:</string>
    <string name="total_credit">Total Credit</string>
    <string name="filter_by">Filter By</string>
    <string name="debit">Debit</string>
    <string name="cancle_text">Cancel</string>
    <string name="donation_added">Donation Added</string>
    <string name="pay_for_order">Paid For Order</string>
    <string name="gurdians">Guardian(s)</string>
    <string name="personal">Personal</string>
    <string name="contact_detail">Contact details</string>
    <string name="birthday">Birthday :</string>
    <string name="passport">DNI or Passport :</string>
    <string name="disount">Discounts</string>
    <string name="discount_dispensary">Discount dispensary :</string>
    <string name="discount_bar">Discount bar :</string>
    <string name="usage">Usage</string>
    <string name="type">Type :</string>
    <string name="consumption">Monthly consumption :</string>
    <string name="preferences">Preferences</string>
    <string name="weekly_averages">Weekly averages</string>
    <string name="dispenses">Dispenses :</string>
    <string name="spenditure">Spenditure :</string>
    <string name="es">es</string>
    <string name="parsing_exception">Parsing Exception</string>
    <string name="press_text">Press again to exit</string>
    <string name="exit">Exit</string>
    <string name="image_jpeg">image/jpeg</string>
    <string name="image_png">image/png</string>
    <string name="title">Title</string>
    <string name="order_id">Order Id</string>
    <string name="totalPrice">Total Price</string>
    <string name="dispense_detail">Dispense Detail</string>
    <string name="thirty_days">Last 30 Orders</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="pay_now">Pay Now</string>
    <string name="go_to_home">Go To Home</string>
    <string name="max_credit">Max Credit</string>
    <string name="order_success">Order Success</string>
    <string name="add_donation">Please add donation amount</string>
    <string name="order_success_msg">Your order has been placed successfully!!</string>
    <string name="payment">Payment</string>
    <string name="logout_dialog">Are you sure want to logout?</string>
    <string name="settings">Settings</string>
    <string name="pre_register">Pre Registration</string>
    <string name="topUpCredit">Top-up credit</string>
    <string name="preOrdering">Pre-ordering</string>
    <string name="showPrices">Show prices in menu</string>
    <string name="show_prices_dispense_history">Show prices in dispense history</string>
    <string name="showMenu">Show menu</string>
    <string name="save">Save</string>
    <string name="addWifiMacAddress">Add wifi mac address</string>
    <string name="enterMacAddress">Enter mac address</string>
    <string name="delete_address_dialog">Are you sure want to delete mac address?</string>
    <string name="delete_notification_dialog">Are you sure want to delete this notification?</string>
    <string name="empty_mac_address_err_msg">Please enter mac address</string>
    <string name="mac_address_err_msg">Please enter valid mac address</string>
    <string name="permission_err_msg">You don\'t have permission.Please contact admin</string>
    <string name="pay_with_google">Pay With Google</string>
    <string name="pay_with_credit_debit_card">Pay With Credit/Debit Card</string>
    <string name="product_description">Product Description</string>
    <string name="product_medical_description">Product Medical Description</string>
    <string name="ok">OK</string>
    <string name="order_date">Order Date</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="menu">Menu</string>
    <string name="donation">Donation</string>
    <string name="map">Club Location</string>
    <string name="map_type">Map</string>
    <string name="total">totals</string>
    <string name="total_products">Total Products</string>
    <string name="total_amount">Total Amount</string>
    <string name="to_pay">To Pay</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="fee_expires">Fee Expires</string>
    <string name="add">Add</string>
    <string name="personal_information">Personal information</string>
    <string name="use">use</string>
    <string name="monthly_consumption">Monthly Consumption:</string>
    <string name="contact_information">Contact information</string>
    <string name="address">Address:</string>
    <string name="telephone">Tel:</string>
    <string name="guardians">guardians</string>
    <string name="member_interviewd">member interviewed</string>
    <string name="add_donation_label">add donation</string>
    <string name="amount">amount</string>
    <string name="add_note">add note</string>
    <string name="id">id</string>
    <string name="products">Products</string>
    <string name="in_app">In App</string>
    <string name="in_club">In Club</string>
    <string name="undo">Undo</string>
    <string name="view_cart">View cart</string>
    <string name="product">Product</string>
    <string name="added">added</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_payment_1">ORDER PAYMENT</string>
    <string name="str_yesterday">Yesterday</string>
    <string name="str_month_ago">month ago</string>
    <string name="str_days_ago">days ago</string>
    <string name="str_hour_ago">hour ago</string>
    <string name="str_minute_ago">minute ago</string>
    <string name="str_second_ago">second ago</string>
    <string name="str_old_password">Confirm Passcode</string>
    <string name="str_new_password">New Passcode</string>
    <string name="str_please_enter_new_password">Please Enter New Passcode</string>
    <string name="str_please_enter_old_password">Please Enter Confirm Passcode</string>
    <string name="str_please_enter_old__new_password_same">New Passcode and Confirm Passcode are not Same</string>
    <string name="str_submit">Submit</string>
    <string name="str_euro">\u20ac</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_a_valid_email">Please enter a valid email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_reenter_password">Please reenter your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="password_validation">Password should be minimum 8 digit which contain alpha numeric, capital, small and special character</string>
    <string name="add_club">Add Club</string>
    <string name="confirm">Confirm</string>
    <string name="enter_code">Enter Code*</string>
    <string name="insert_code_here">Insert code here</string>
    <string name="order_history">History</string>
    <string name="please_choose_a_date_for_your_visit">Please choose a date for your visit</string>
    <string name="please_choose_a_time_for_your_visit">Please choose a time for your visit</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="your_signature">Your signature</string>
    <string name="pre_register_term_and_condition_one">Provision of the requested service (If you accept the processing of your data for this purpose, check this box).</string>
    <string name="pre_register_term_and_condition_two">Sending emails and/or SMS to your mobile phone, with information, newsletter, and services of your interest (If you accept the processing of your data for this purpose, check this box).</string>
    <string name="pre_register_term_and_condition_three">The member confirms that he/she has read the statutes and the contract for new members.</string>
    <string name="reason">Reason</string>
    <string name="block_report">Block &amp; Report</string>
</resources>