<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_161D26"
    android:orientation="vertical"
    android:paddingTop="@dimen/_40sdp"
    tools:context=".fragment.PreRegisterSignAndAcceptFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/_161D26"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_drawable"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTermAndCondition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:textColor="@color/white"
                tools:text="Dummy"
                android:textSize="@dimen/txt_15" />

        </androidx.core.widget.NestedScrollView>

        <CheckBox
            android:id="@+id/chkTermOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/btn_color"
            android:textColor="@color/white"
            android:text="@string/pre_register_term_and_condition_one"/>

        <CheckBox
            android:id="@+id/chkTermTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/btn_color"
            android:textColor="@color/white"
            android:text="@string/pre_register_term_and_condition_two"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDateOfBirth"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/date_of_birth"
            android:textAllCaps="false"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/button_textsize"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/_8sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddSignature"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/your_signature"
            android:textAllCaps="false"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/button_textsize"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/_8sdp" />

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:id="@+id/ivSign"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:visibility="gone"
            android:adjustViewBounds="true"/>

        <CheckBox
            android:id="@+id/chkTermThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/btn_color"
            android:textColor="@color/white"
            android:text="@string/pre_register_term_and_condition_three"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:padding="@dimen/_10sdp"
            android:text="@string/str_submit"
            android:textAllCaps="false"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/button_textsize"
            app:backgroundTint="@color/btn_color"
            app:cornerRadius="@dimen/_8sdp" />

    </LinearLayout>

</LinearLayout>