<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_161D26"
    android:orientation="vertical"
    tools:context=".activity.PreRegisterChooseDateAndTimeActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/transparent"
      android:padding="0dp"
      app:contentInsetRight="0dp"
      app:popupTheme="@style/AppTheme.PopupOverlay">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back_white" />

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_70sdp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:text="@string/pre_register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_14"
        android:textStyle="bold" />

  </androidx.appcompat.widget.Toolbar>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/_161D26"
      android:layout_marginHorizontal="@dimen/_16sdp"
      android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDate"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:padding="@dimen/_10sdp"
        android:text="@string/please_choose_a_date_for_your_visit"
        android:textAllCaps="false"
        android:textColor="@color/btn_text_color"
        android:textSize="@dimen/button_textsize"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_8sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTime"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:padding="@dimen/_10sdp"
        android:text="@string/please_choose_a_time_for_your_visit"
        android:textAllCaps="false"
        android:textColor="@color/btn_text_color"
        android:textSize="@dimen/button_textsize"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/_8sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_submit"
        android:textAllCaps="false"
        android:textColor="@color/btn_text_color"
        android:textSize="@dimen/button_textsize"
        app:backgroundTint="@color/btn_color"
        app:cornerRadius="@dimen/_8sdp" />

  </LinearLayout>

  </LinearLayout>