<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_round_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filter_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/productsans_regular"
            android:text="@string/filter_by"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />

        <View
            android:id="@+id/viewline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@color/gray" />

        <RadioGroup
            android:id="@+id/radioGrpfilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbcredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="4dp"
                android:fontFamily="@font/productsans_regular"
                android:layoutDirection="ltr"
                android:text="@string/credit"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <RadioButton
                android:id="@+id/rbdebit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="4dp"
                android:fontFamily="@font/productsans_regular"
                android:layoutDirection="ltr"
                android:text="@string/debit"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@android:color/transparent" />


    <LinearLayout
        android:id="@+id/ll_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_round_corner"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/productsans_regular"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/cancle_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</LinearLayout>
